# WebRPC

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  WebRPCConfig.cmake  build.sh  conanfile.txt  http_server_fast.cpp  issues.md
cmake/: FindApprovalTests.cmake  FindConan.cmake
doc/: References.md  Roadmap.md  Structure.md
examples/: CMakeLists.txt  SampleClient.cpp  SampleParser.cpp  SampleServer.cpp  map-parser-example.cpp
examples/src/: SampleClient.cpp  SampleParser.cpp  SampleServer.cpp
include/: fields_alloc.h
include/webrpc/: AbstractMethod.h  Client.h  IMethod.h  IRegistry.h  Method.h  Parser.h  Registry.h  Server.h  Target.h  Uri.h  Value.h  Version.h.in
include/webrpc/detail/: fields_alloc.h
include/webrpc/method/: SystemListMethods.h
lib/: CMakeLists.txt
lib/include/webrpc/: Client.h  IMethod.h  Parser.h  Registry.h  Server.h  Target.h  Util.h  Value.h  Version.h.in
lib/include/webrpc/detail/: HttpWorker.h  fields_alloc.h
lib/include/webrpc/method/: SystemListMethods.h
lib/src/: AbstractMethod.cpp  Parser.cpp  Server.cpp  Value.cpp
lib/src/detail/: HttpWorker.cpp
script/: build-with-deps.sh  build-with-local-deps.sh  build.sh  setup-boost.sh  setup-cmake-ppa.sh  setup-cmake.sh  setup-dependencies-osx.sh  setup-g++-ppa.sh  setup-tools-linux.sh  setup-tools-osx.sh  setup_boost.sh  setup_gtest.sh
src/: AbstractMethod.cpp  Client.cpp  Method.cpp  Parser.cpp  Registry.cpp  SampleParserMain.cpp  SampleServerMain.cpp  Server.cpp  ServerMain.cpp  Value.cpp
test/: CMakeLists.txt  ParserTest.cpp
test/include/webrpctest/: Testcase.h
test/include/webrpctest/method/: Echo.h
test/src/: ApproveClientServer.ClientServerFixture.Echo.approved.txt  ApproveClientServer.cpp  ApproveMain.cpp  ClientServerTest.cpp  HttpWorkerTest.cpp  ParserTest.cpp  RegistryTest.cpp  TestAllocator.cpp  TestClientServer.cpp  TestHttpWorker.cpp  TestParser.cpp  TestRegistry.cpp  Testcases.cpp
